    of leading/trailing whitespace doesn't work.  For example:
    ```
    [hi]

    [ hi ]: url
    ```
  * Use U+FFFD for entities resolving to 0 (jgm/CommonMark#323).
  * Fixed bug with list items indented >= 4 spaces (#42).
  * Extract regex test results in `scanDelims` as local variables
    (Robin Stocker). Also, abort earlier when no delims where found.
  * Added travis & npm buttons to README.md (Vitaly Puzrin).
  * Travis-CI: refresh node.js versions & use docker containers
    (Vitaly Puzrin).
  * Dingus css:  set colors for textarea (#319). Otherwise we may run
    into problems for people who have set their textarea default
    colors.

[0.19.0]

  * Fixed underscore emphasis to conform to spec changes
    (jgm/CommonMark#317, #12).
  * Fixed variable shadowing (linter warnings) in `test.js`.
  * Makefile: Moved `lint` first to avoid regenerating `dist` by accident.
  * Dingus: Fixed word wrapping in text area (jgm/CommonMark#319).
  * Updated `spec.txt` in `test/`.
  * Added `release_checklist.md`.

[0.18.2]

  * Fixed walker so that it stops at `this.root`, even when this is
    not the document root.
  * Fixed typo (Ed Adams).
  * Removed unused argument from `processEmphasis` (Robin Stocker).
  * Shortened code for removing a sequence of delimiters, changing the
    links on the edges rather than dropping them one by one
    (Eli Barzilay).
  * Code layout improvements for readability (Eli Barzilay).
  * Dingus:  rewrote without ACE editor for better accessibility
    and to fix layout in smal windows (#11).
  * Optimize checking for final spaces in `parseNewline` (Robin
    Stocker).  This yields a 5-10% speed improvement in `make bench`.
  * Consolidated regex definitions (Robin Stocker).
  * Return boolean from `spnl` and `parseBackticks` for consistency
    (Robin Stocker).
  * Removed unnecessary check for hrule in `parseListMarker` (Robin
    Stocker).
  * Return error status if tests fail.