@@ -12,6 +12,7 @@
   * Fixed bug with list items indented >= 4 spaces (#42).
   * Extract regex test results in `scanDelims` as local variables
     (Robin Stocker). Also, abort earlier when no delims where found.
+  * Added test for alternate line endings.
   * Added travis & npm buttons to README.md (Vitaly Puzrin).
   * Travis-CI: refresh node.js versions & use docker containers
     (Vitaly Puzrin).
